--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "node-cron": "^3.0.2"
   }
 }
