--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "serverless": "^3.38.0",
+    "serverless-http": "^3.2.0"
   }
 }
